banner section modified

--- a/index.html
+++ b/index.html
@@ -19,17 +19,30 @@
   <body>
     <!-- banner section start -->
     <section id="banner">
-      <div class="banner-intro">
+      <div class="banner-intro center">
         <h1>Let’s Help Those Who Are More In Need</h1>
         <p>
           Lorem ipsum dolor sit amet, usu cu esse possit referrentur, at eam
           falli deterruisset. No duo populo animal noluisse, enim
         </p>
-        <div class="btn">
+        <div class="btn center">
           <a href="#">Donate Now</a>
         </div>
       </div>
     </section>
     <!-- banner section end -->
+    <section class="donate-today center">
+        <h1>fdjf</h1>
+        <h1>ff</h1>
+        <h1>ff</h1>
+        <h1>fff</h1>
+        <h1>ffffff</h1>
+        <h1>ffffff</h1>
+        <h1>ffffff</h1>
+        <h1>ffffff</h1>
+        <h1>ffffff</h1>
+        <h1>ffffff</h1>
+        <h1>ffffff</h1>
+    </section>
   </body>
 </html>
