donate today added-half

--- a/index.html
+++ b/index.html
@@ -32,17 +32,23 @@
     </section>
     <!-- banner section end -->
     <section class="donate-today center">
-        <h1>fdjf</h1>
-        <h1>ff</h1>
-        <h1>ff</h1>
-        <h1>fff</h1>
-        <h1>ffffff</h1>
-        <h1>ffffff</h1>
-        <h1>ffffff</h1>
-        <h1>ffffff</h1>
-        <h1>ffffff</h1>
-        <h1>ffffff</h1>
-        <h1>ffffff</h1>
+      <h2>Donate Today</h2>
+      <p>
+        Lorem ipsum dolor sit amet, usu cu esse possit referrentur, at eam falli
+        deterruisset. No duo populo animal noluisse, enim
+      </p>
+      <div class="donation-amount">
+        <div class="amount"><h5 id="amount1">100tk</h5></div>
+        <div class="amount"><h5 id="amount2">200tk</h5></div>
+        <div class="amount" id="active-b"><h5 id="active-c">500tk</h5></div>
+        <div class="amount"><h5 id="amount4">1000tk</h5></div>
+        <div class="amount"><h5 id="amount5">5000tk</h5></div>
+      </div>
+      <input type="text" placeholder="Other Amount (Taka)" />
+      <hr />
+      <div class="btn center">
+        <a href="#">Donate Now</a>
+      </div>
     </section>
   </body>
 </html>
