donate today completed

--- a/index.html
+++ b/index.html
@@ -44,8 +44,7 @@
         <div class="amount"><h5 id="amount4">1000tk</h5></div>
         <div class="amount"><h5 id="amount5">5000tk</h5></div>
       </div>
-      <input type="text" placeholder="Other Amount (Taka)" />
-      <hr />
+      <input mode="numeric" id="tk" name="tk" placeholder="Other Amount (Taka)" />
       <div class="btn center">
         <a href="#">Donate Now</a>
       </div>
