finalized style up to donate today

--- a/index.html
+++ b/index.html
@@ -1,53 +1,90 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Donate Today</title>
-    <!-- google fonts -->
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Inter&family=Poppins&display=swap"
-      rel="stylesheet"
-    />
-    <!-- css -->
-    <link rel="stylesheet" href="style.css" />
-  </head>
 
-  <body>
-    <!-- banner section start -->
-    <section id="banner">
-      <div class="banner-intro center">
-        <h1>Let’s Help Those Who Are More In Need</h1>
-        <p>
-          Lorem ipsum dolor sit amet, usu cu esse possit referrentur, at eam
-          falli deterruisset. No duo populo animal noluisse, enim
-        </p>
-        <div class="btn center">
-          <a href="#">Donate Now</a>
-        </div>
+<head>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Donate Today</title>
+  <!-- google fonts -->
+  <link rel="preconnect" href="https://fonts.googleapis.com" />
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+  <link href="https://fonts.googleapis.com/css2?family=Inter&family=Poppins&display=swap" rel="stylesheet" />
+  <!-- css -->
+  <link rel="stylesheet" href="style.css" />
+</head>
+
+<body>
+  <!-- banner section start -->
+  <section id="banner">
+    <div class="banner-intro center">
+      <h1>Let’s Help Those Who Are More In Need</h1>
+      <p>
+        Lorem ipsum dolor sit amet, usu cu esse possit referrentur, at eam
+        falli deterruisset. No duo populo animal noluisse, enim
+      </p>
+      <div class="btn center">
+        <a href="#">Donate Now</a>
       </div>
-    </section>
-    <!-- banner section end -->
-    <section class="donate-today center">
+    </div>
+  </section>
+  <!-- banner section end -->
+
+  <!-- donate-today section start -->
+  <section class="donate-today">
+    <div class="center">
       <h2>Donate Today</h2>
       <p>
         Lorem ipsum dolor sit amet, usu cu esse possit referrentur, at eam falli
         deterruisset. No duo populo animal noluisse, enim
       </p>
       <div class="donation-amount">
-        <div class="amount"><h5 id="amount1">100tk</h5></div>
-        <div class="amount"><h5 id="amount2">200tk</h5></div>
-        <div class="amount" id="active-b"><h5 id="active-c">500tk</h5></div>
-        <div class="amount"><h5 id="amount4">1000tk</h5></div>
-        <div class="amount"><h5 id="amount5">5000tk</h5></div>
+        <div class="amount">
+          <h5 id="amount1">100tk</h5>
+        </div>
+        <div class="amount">
+          <h5 id="amount2">200tk</h5>
+        </div>
+        <div class="amount" id="active-b">
+          <h5 id="amount3">500tk</h5>
+        </div>
+        <div class="amount">
+          <h5 id="amount4">1000tk</h5>
+        </div>
+        <div class="amount">
+          <h5 id="amount5">5000tk</h5>
+        </div>
       </div>
       <input mode="numeric" id="tk" name="tk" placeholder="Other Amount (Taka)" />
       <div class="btn center">
         <a href="#">Donate Now</a>
       </div>
-    </section>
-  </body>
+    </div>
+  </section>
+  <!-- donate-today section end -->
+
+  <!-- donate-plan section start -->
+  <section class="donate-plan">
+    <div class="center">
+      <h2>Our Donate Plan</h2>
+      <p>
+        Lorem ipsum dolor sit amet, usu cu esse possit referrentur, at eam falli
+        deterruisset. No duo populo animal noluisse, enim
+      </p>
+      <div id="card-container">
+        <div class="card card-1">
+          <img src="./icons/food.png" alt="food">
+        </div>
+        <div class="card card-2">
+          
+        </div>
+        <div class="card card-3">
+          
+        </div>
+      </div>
+    </div>
+  </section>
+  <!-- donate-plan section end -->
+</body>
+
 </html>
