Our donate plan completed

--- a/index.html
+++ b/index.html
@@ -65,22 +65,56 @@
 
   <!-- donate-plan section start -->
   <section class="donate-plan">
-    <div class="center">
-      <h2>Our Donate Plan</h2>
-      <p>
-        Lorem ipsum dolor sit amet, usu cu esse possit referrentur, at eam falli
-        deterruisset. No duo populo animal noluisse, enim
-      </p>
+    <div class="plan">
+      <div class="center">
+        <h2>Our Donate Plan</h2>
+        <p>
+          Lorem ipsum dolor sit amet, usu cu esse possit referrentur, at eam falli
+          deterruisset. No duo populo animal noluisse, enim
+        </p>
+      </div>
+
+      <!-- card start -->
       <div id="card-container">
-        <div class="card card-1">
-          <img src="./icons/food.png" alt="food">
-        </div>
         <div class="card card-2">
-          
+          <div class="content">
+            <img src="./icons/food.png" alt="food">
+            <div class="card-content">
+              <h6>Shelter for a family</h6>
+              <p>Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat
+                duis
+                enim
+                velit mollit.</p>
+            </div>
+          </div>
         </div>
+
+        <div class="card card-2">
+          <div class="content">
+            <img src="./icons/food.png" alt="food">
+            <div class="card-content">
+              <h6>Food for a family</h6>
+              <p>Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat
+                duis
+                enim
+                velit mollit.</p>
+            </div>
+          </div>
+        </div>
+
         <div class="card card-3">
-          
+          <div class="content">
+            <img src="./icons/food.png" alt="food">
+            <div class="card-content">
+              <h6>Food for a family</h6>
+              <p>Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat
+                duis
+                enim
+                velit mollit.</p>
+            </div>
+          </div>
         </div>
+        <!-- card end -->
       </div>
     </div>
   </section>
