--- a/index.html
+++ b/index.html
@@ -7,9 +7,10 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Donate Today</title>
   <!-- google fonts -->
-  <link rel="preconnect" href="https://fonts.googleapis.com" />
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-  <link href="https://fonts.googleapis.com/css2?family=Inter&family=Poppins&display=swap" rel="stylesheet" />
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Inter&family=Lobster&family=Manrope&family=Poppins&display=swap"
+    rel="stylesheet">
   <!-- css -->
   <link rel="stylesheet" href="style.css" />
 </head>
@@ -76,42 +77,36 @@
 
       <!-- card start -->
       <div id="card-container">
-        <div class="card card-2">
-          <div class="content">
-            <img src="./icons/food.png" alt="food">
-            <div class="card-content">
-              <h6>Shelter for a family</h6>
-              <p>Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat
-                duis
-                enim
-                velit mollit.</p>
-            </div>
+        <div class="card card-1">
+          <img src="./icons/food.png" alt="food">
+          <div class="card-content">
+            <h6>Food for a family</h6>
+            <p>Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat
+              duis
+              enim
+              velit mollit.</p>
           </div>
         </div>
 
         <div class="card card-2">
-          <div class="content">
-            <img src="./icons/food.png" alt="food">
-            <div class="card-content">
-              <h6>Food for a family</h6>
-              <p>Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat
-                duis
-                enim
-                velit mollit.</p>
-            </div>
+          <img src="./icons/shelter.png" alt="food">
+          <div class="card-content">
+            <h6>Shelter for a family</h6>
+            <p>Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat
+              duis
+              enim
+              velit mollit.</p>
           </div>
         </div>
 
         <div class="card card-3">
-          <div class="content">
-            <img src="./icons/food.png" alt="food">
-            <div class="card-content">
-              <h6>Food for a family</h6>
-              <p>Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat
-                duis
-                enim
-                velit mollit.</p>
-            </div>
+          <img src="./icons/education.png" alt="food">
+          <div class="card-content">
+            <h6>Education for a child</h6>
+            <p>Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat
+              duis
+              enim
+              velit mollit.</p>
           </div>
         </div>
         <!-- card end -->
@@ -119,6 +114,15 @@
     </div>
   </section>
   <!-- donate-plan section end -->
+
+  <!-- footer start -->
+  <footer>
+    <div class="center">
+      <h4>Be Humble</h4>
+      <p>I’m gonna do it</p>
+    </div>
+  </footer>
+  <!-- footer end -->
 </body>
 
 </html>
