gets my update(bonus part) completed

--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
   <!-- google fonts -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Inter&family=Lobster&family=Manrope&family=Poppins&display=swap"
+  <link
+    href="https://fonts.googleapis.com/css2?family=Inter&family=Lobster&family=Manrope&family=Poppins&family=Roboto&display=swap"
     rel="stylesheet">
   <!-- css -->
   <link rel="stylesheet" href="style.css" />
@@ -114,6 +115,27 @@
     </div>
   </section>
   <!-- donate-plan section end -->
+
+<!-- about-us section start -->
+<!-- about-us section start -->
+
+  <!-- get-update section start -->
+  <section class="get-update">
+    <div class="center">
+      <h2>Get My Updates</h2>
+      <p>
+        Lorem ipsum dolor sit amet, usu cu esse possit referrentur, at eam falli
+        deterruisset. No duo populo animal noluisse, enim
+      </p>
+      <div class="form center">
+        <form action="">
+          <input type="email" name="email" id="email">
+          <button>Subscribe</button>
+        </form>
+      </div>
+    </div>
+  </section>
+  <!-- get-update section end -->
 
   <!-- footer start -->
   <footer>
