--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
   <link
     href="https://fonts.googleapis.com/css2?family=Inter&family=Lobster&family=Manrope&family=Poppins&family=Roboto&display=swap"
     rel="stylesheet">
+  <!-- font awesome -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <!-- css -->
   <link rel="stylesheet" href="style.css" />
 </head>
@@ -116,8 +118,41 @@
   </section>
   <!-- donate-plan section end -->
 
-<!-- about-us section start -->
-<!-- about-us section start -->
+  <!-- about-us section start -->
+  <section class="about-us">
+    <div class="center">
+      <h2>About Us</h2>
+      <p><span>We are not working for us.</span> We work for helpless people. We want to stand by those people, who are
+        facing hard situations such as <span> Flood, Storm, War</span> etc. Our volunteers are active very much. They
+        are dedicated to helping people in any situations. You can visit our Website to know more about us.</p>
+    </div>
+    <div id="counts">
+      <div id="charities">
+        <i class="fa fa-users" aria-hidden="true" style="font-size: 100px;color: rgb(52, 202, 52);"></i>
+        <h3>$43 million</h3>
+        <p>raised for over 2,700 charities worldwide</p>
+      </div>
+      <div id="donors">
+        <i class="fa fa-hand-peace-o" aria-hidden="true" style="font-size: 100px;color: rgb(230, 138, 138);"></i>
+        <h3>188,000</h3>
+        <p>donors</p>
+      </div>
+      <div class="countries">
+        <i class="fa fa-globe" aria-hidden="true" style="font-size: 100px;color: rgb(62, 165, 206);"></i>
+        <h4>195</h4>
+        <p>countries</p>
+      </div>
+      
+    </div>
+    <h4>Gallery</h4>
+      <div class="gallery">
+        <div><img src="./images/donation1.jpg" alt="one" width="350px" height="250px"></div>
+        <div><img src="./images/donation0.jpg" alt="zero" width="350px" height="250px"></div>
+        <div><img src="./images/donation4.jpg" alt="four" width="350px" height="250px"></div>
+        <div><img src="./images/donation5.jpg" alt="five" width="350px" height="250px"></div>
+      </div>
+  </section>
+  <!-- about-us section start -->
 
   <!-- get-update section start -->
   <section class="get-update">
