Finally completed first assignment

--- a/index.html
+++ b/index.html
@@ -24,8 +24,7 @@
     <div class="banner-intro center">
       <h1>Let’s Help Those Who Are More In Need</h1>
       <p>
-        Lorem ipsum dolor sit amet, usu cu esse possit referrentur, at eam
-        falli deterruisset. No duo populo animal noluisse, enim
+        We can help our helpless people. So, Donate to a local, independent and trusted charity helping Sylhet people as your capability.
       </p>
       <div class="btn center">
         <a href="#">Donate Now</a>
@@ -39,8 +38,7 @@
     <div class="center">
       <h2>Donate Today</h2>
       <p>
-        Lorem ipsum dolor sit amet, usu cu esse possit referrentur, at eam falli
-        deterruisset. No duo populo animal noluisse, enim
+        Donate today for flood affected people of Sylhet. Maybe your donation can make a smile. Many people waiting for your help. Let's help them.
       </p>
       <div class="donation-amount">
         <div class="amount">
@@ -73,8 +71,7 @@
       <div class="center">
         <h2>Our Donate Plan</h2>
         <p>
-          Lorem ipsum dolor sit amet, usu cu esse possit referrentur, at eam falli
-          deterruisset. No duo populo animal noluisse, enim
+          Our Donate plan is now for Sylhet people. They are in hard situation. We will collect your donation and we will buy foods. Then we go to near those helpless people and distribute to them. We will also buy those thins that they are needed.
         </p>
       </div>
 
@@ -84,10 +81,7 @@
           <img src="./icons/food.png" alt="food">
           <div class="card-content">
             <h6>Food for a family</h6>
-            <p>Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat
-              duis
-              enim
-              velit mollit.</p>
+            <p>In this flood, many people caught by flood's water. In this situation can not go out. As a result they can not buy their food. So, Donate! So, we can provide food to a family one by one.</p>
           </div>
         </div>
 
@@ -95,10 +89,7 @@
           <img src="./icons/shelter.png" alt="food">
           <div class="card-content">
             <h6>Shelter for a family</h6>
-            <p>Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat
-              duis
-              enim
-              velit mollit.</p>
+            <p>Flood remains still now from the last 10 days. So, children are not going to the school. Because, there is no scope to go out. If we want we can help those child to continue their education.</p>
           </div>
         </div>
 
