update with lorem ipsum

--- a/index.html
+++ b/index.html
@@ -150,8 +150,7 @@
     <div class="center">
       <h2>Get My Updates</h2>
       <p>
-        Lorem ipsum dolor sit amet, usu cu esse possit referrentur, at eam falli
-        deterruisset. No duo populo animal noluisse, enim
+        If you want to get my updates, you can subscribe my website by giving your email address. So, give your email and click the subscribe button and get all updates.
       </p>
       <div class="form center">
         <form action="">
