update without lorem ipsum

--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
           <img src="./icons/shelter.png" alt="food">
           <div class="card-content">
             <h6>Shelter for a family</h6>
-            <p>Flood remains still now from the last 10 days. So, children are not going to the school. Because, there is no scope to go out. If we want we can help those child to continue their education.</p>
+            <p>Many people lost their home. They can not go their home. They are staying now at schools buildings. Small place and huge people. So, they are not comfortable in this situation. So, We can give them a shelter. After flood they will need to remake their home.</p>
           </div>
         </div>
 
@@ -97,10 +97,7 @@
           <img src="./icons/education.png" alt="food">
           <div class="card-content">
             <h6>Education for a child</h6>
-            <p>Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat
-              duis
-              enim
-              velit mollit.</p>
+            <p>Flood remains still now from the last 10 days. So, children are not going to the school. Because, there is no scope to go out. If we want we can help those child to continue their education.</p>
           </div>
         </div>
         <!-- card end -->
