adding placeholder of email feild

--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
       </p>
       <div class="form center">
         <form action="">
-          <input type="email" name="email" id="email">
+          <input type="email" name="email" id="email" placeholder="Email">
           <button>Subscribe</button>
         </form>
       </div>
