--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
         <div><img src="./images/donation5.jpg" alt="five" width="350px" height="250px"></div>
       </div>
   </section>
-  <!-- about-us section start -->
+  <!-- about-us section end -->
 
   <!-- get-update section start -->
   <section class="get-update">
